# python_template

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
