[tool.poetry]
name = "<PROJECT_NAME>"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 120

extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # Pyupgrade
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
