[tool.poetry]
name = "<PROJECT_NAME>"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.ruff]
line-length = 120

extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # Pyupgrade
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
