[project]
name = "new-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 120

lint.extend-select = [
    "A",  # flake8-builtins
    "ANN",# annotations
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # Pyupgrade
    "PL", # Pylint
    "PTH",# enforce pathlib usage 
    "RUF",# Ruff-specific rules
    "W"   # pycodestyle warnings
]
